--- a/PoliceArchive/appsettings.json
+++ b/PoliceArchive/appsettings.json
@@ -5,8 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "PoliceArchiveContext": "Server=(localdb)\\mssqllocaldb;Database=PoliceArchiveContext-9bea8276-d549-4600-ad60-d1299a9b4c29;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+  "AllowedHosts": "*"
 }
